<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".scenarios_main.CategoriasActivity">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
                android:id="@+id/btnBack"
                android:layout_height="24dp"
                android:layout_width="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/left_arrow"
                android:background="@android:color/white"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/voltar"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferencia"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-condensed"
            android:textSize="26sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>

    <TextView
            style="@style/CategoriaText"
            android:text="@string/ingrediente"/>

    <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/btnGin"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/gin"
            android:textSize="18sp"
            android:layout_marginLeft="25dp"/>

        <Button
                android:id="@+id/btnVodka"
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="@string/vodka"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <TextView
            style="@style/CategoriaText"
            android:text="@string/tipo_drink"/>

    <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btnCocktail"
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/coquetel"
                android:textSize="18sp"
                android:layout_marginLeft="25dp"/>

        <Button
                android:id="@+id/btnOrdinary"
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/normal"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

    </LinearLayout>


    <TextView
            style="@style/CategoriaText"
            android:text="@string/teor"/>

    <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btnAlcoholic"
                android:layout_height="wrap_content"
                android:layout_width="170dp"
                android:text="@string/alcoolico"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"/>

        <Button
                android:id="@+id/btnNonAlcoholic"
                android:layout_height="wrap_content"
                android:layout_width="170dp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/nao_alcoolico"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"/>

    </LinearLayout>



</LinearLayout>