<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".scenarios_main.MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_pergunta"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-condensed"
            android:textSize="32sp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>

    <ImageView
            android:layout_width="200dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/cocktail"/>


    <Button
            android:id="@+id/btnCategorias"
            style="@style/MainButton"
            android:text="@string/categorias"/>

    <Button
            android:id="@+id/btnSurpresa"
            style="@style/MainButton"
            android:text="@string/surpresa"/>

</LinearLayout>